# PyEncryption

./: .gitignore  README.md  encryption_cli.py  encryption_gui.py  encryption_logic.py  pyproject.toml  test_encryption.py
.github/workflows/: ci.yml
src/pyencryption/: __init__.py  __main__.py  cli.py  gui.py  utils.py
src/pyencryption/crypto/: __init__.py  aes.py  base.py
tests/: conftest.py  test_aes.py  test_cli.py  test_gui.py  test_utils.py
