[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyencryption"
version = "2.0.0"
description = "File encryption tool with AES-256-GCM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "eleander56" },
]
dependencies = [
    "cryptography>=42.0",
    "click>=8.1",
]

[project.optional-dependencies]
gui = ["pillow>=10.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
pyencrypt = "pyencryption.cli:main"

[project.gui-scripts]
pyencrypt-gui = "pyencryption.gui:launch_gui"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.coverage.run]
omit = ["src/pyencryption/gui.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gui: marks tests that require a display (deselect with '-m not gui')",
]
